finalização dos campos de inserção da dados

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -12,6 +12,7 @@
     --green-500: #00c925;
     --fire-500: #e85f5c;
     --yellow-500: #faa916;
+    --gray-700: #3e4042;
     --gray-800: #2b2e2f;
 }
 
