--- a/src/pages/Home/styles.module.scss
+++ b/src/pages/Home/styles.module.scss
@@ -1,9 +1,7 @@
-.container {
-    
+.container {    
     max-width: 1120px;
     margin: 0 auto;
     padding: 2.5rem 1rem;
-
     h1 {
         display: flex;
         font-size: 2.5rem;
@@ -14,6 +12,36 @@
             color: var(--green-500);
             margin-left: 0.5rem;
         }
+    }
+
+    div {
+        display: flex;
+        justify-content: space-between;
+        margin-top: 4rem;
+    }
+
+    input {
+        justify-content: center;
+        align-items: center;
+        max-width: 250px;
+        width: 100%;
+        padding: 1rem 2rem;
+        border: 1px solid var(--gray-300);
+        font-size: 1.5rem;
+        border-radius: 0.5rem;
+        color: var(--text-100);
+        background-color: var(--gray-700);
+    }
+
+    select {
+        max-width: 250px;
+        width: 100%;
+        padding: 1rem 2rem;
+        border: 1px solid var(--gray-300); 
+        font-size: 1.5rem;
+        border-radius: 0.5rem;
+        color: var(--text-100);
+        background-color: var(--gray-700);
     }
 
 }
